crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/noMetrics.usda
version https://git-lfs.github.com/spec/v1
oid sha256:b73bc2e9d3207f0cafbdb014fe1e34f6fcd48120180190a58610b2ea54c5e6fa
size 81
